# brewery-db

./: .gitignore  README.md  main.py  pyproject.toml
airflow/: Dockerfile.txt  README.md  docker-compose.txt  requirements.txt
airflow/dags/: dag_brewery_pipeline.txt
data/bronze/brewery/: data.parquet
data/gold/brewery/: brewery_gold.parquet
data/silver/brewery/country=Ireland/state_province=Laois/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=Arizona/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=California/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=Colorado/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=Delaware/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=Idaho/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=Illinois/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=Indiana/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=Iowa/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=Maryland/: 00000000.parquet
data/silver/brewery/country=United%20States/state_province=Massachusetts/: 00000000.parquet
data/staging/: brewerydb.parquet
images/: README.md
notebooks/bronze/: stg_brz_brewerylist.py
notebooks/gold/: slv_gld_brewerylist.py
notebooks/silver/: brz_slv_brewerylist.py
orchestration/: run_pipeline.py
src/: extractor.py
(+16 files in other folders)
