[project]
name = "brewery-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake>=0.25.4",
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "polars>=1.26.0",
    "pyodbc>=5.2.0",
    "pyspark>=3.5.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]
